--- a/assets/sass/layout/_bg.scss
+++ b/assets/sass/layout/_bg.scss
@@ -41,13 +41,13 @@
 		}
 
 		&:after {
-			@include vendor('transform', 'scale(1.125)');
+			@include vendor('transform', 'scale(1.0)');
 			@include vendor('transition', (
 				'transform #{_duration(article)} ease-in-out',
 				'filter #{_duration(article)} ease-in-out'
 			));
-			background-image:		url('../../images/bg.jpg');
-			background-position:	center;
+			background-image:		url('../../images/banner.jpg');
+			background-position:	center 15%;
 			background-size:		cover;
 			background-repeat:		no-repeat;
 			z-index: 1;
